bugfix: collapsible/accordion would overflow under the footer with enough content inside

--- a/src/components/Collapsible.module.scss
+++ b/src/components/Collapsible.module.scss
@@ -6,6 +6,7 @@
 
 .container {
   @include typography.font(small);
+  overflow: hidden;
 
   &.accordion {
     margin: layout.space(medium) 0;
